--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "missions-api",
+  "name": "jsonplace",
   "version": "1.0.0",
-  "description": "",
+  "description": "Render uchun json-server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "json-server --watch users.json --port 10000"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "json-server": "^0.17.3"
   }
 }
